- Replaced println statements by logging - Added MutableTreeNode and MutableNode - Updated to version 1.0.4.22